added more comments to vacationpy

--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -262,7 +262,7 @@
     }
    ],
    "source": [
-    "# \n",
+    "# read the csv made from the weatherpy homework\n",
     "city_data_df = pd.read_csv(\"output_resource/city_data.csv\")\n",
     "city_data_df"
    ]
@@ -283,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# \n",
+    "# configure gmaps\n",
     "gmaps.configure(api_key=g_key)"
    ]
   },
@@ -308,7 +308,7 @@
     }
    ],
    "source": [
-    "# \n",
+    "# add heatmap layer using humidity for the cities found in weatherpy\n",
     "locations = city_data_df[[\"Lat\", \"Lng\"]].astype(float)\n",
     "humidity = city_data_df[\"Humidity\"].astype(float)\n",
     "fig = gmaps.figure()\n",
@@ -503,7 +503,8 @@
     }
    ],
    "source": [
-    "# \n",
+    "# narrowing down cities for the perfect vacation destination\n",
+    "# temp in between 70-80 (exclusive), with zero cloudiness for the beautiful sky\n",
     "vacation_city_df = city_data_df.loc[city_data_df[\"Max Temp\"] < 80, :]\n",
     "vacation_city_df = vacation_city_df.loc[vacation_city_df[\"Max Temp\"] > 70, :]\n",
     "vacation_city_df = vacation_city_df.loc[vacation_city_df[\"Cloudiness\"] == 0, :]\n",
@@ -643,6 +644,7 @@
     }
    ],
    "source": [
+    "# putting the narrowed down cities into a new dataframe with selected columns\n",
     "hotel_df = pd.DataFrame(vacation_city_df, columns=[\"City\", \"Country\", \"Lat\", \"Lng\", \"Max Temp\"])\n",
     "hotel_df"
    ]
@@ -776,10 +778,12 @@
     }
    ],
    "source": [
+    "# make a new list hotels to store nearby hotel\n",
     "hotels = []\n",
     "lat = hotel_df[\"Lat\"].tolist()\n",
     "lng = hotel_df[\"Lng\"].tolist()\n",
     "\n",
+    "# run through the google api to find nearest hotel within 5000m radius\n",
     "for x in range(len(hotel_df)):\n",
     "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
     "    params = {\"location\": f\"{lat[x]}, {lng[x]}\",\n",
@@ -790,6 +794,7 @@
     "    request = requests.get(base_url, params=params).json()\n",
     "    hotels.append(request[\"results\"][0][\"name\"])\n",
     "\n",
+    "# store to hotel dataframe\n",
     "hotel_df[\"Hotel Name\"] = hotels\n",
     "hotel_df"
    ]
